feat: finish asynchronous video submissions
